--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,53 @@
 html,
 body {
-  height: 100%;
+  height: 50%;
   padding: 0;
   margin: 0;
 }
-
-#div1 {
-  width: 50%;
-  height: 50%;
-  float: left;
-  background: #DDD;
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 10px;
+  height: 100vh;
+  width: 100vw;
+  position:relative;
 }
 
-#div2 {
-  width: 50%;
-  height: 50%;
-  float: left;
-  background: #DDD;
+.chart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+   border: 1px solid black;
+  box-sizing: border-box; 
+  padding: 1em;
+  font-size: 1.5em;
+ 
 }
 
-#div3 {
-  width: 50%;
-  height: 50%;
-  float: left;
-  background: #DDD;
+
+.Bar {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
 }
 
-#div4 {
-  width: 50%;
-  height: 50%;
-  float: left;
-  background: #DDD;
+.Line {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
 }
 
-.parent {
-  position: absolute;
+.Pie {
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+ 
 }
 
-.doughnut,
-.pie {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.Doughnut {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+
 }
+/* .chart-container {
+  width: 300px;
+  height: 300px;
+} */
