--- a/src/App.css
+++ b/src/App.css
@@ -86,3 +86,36 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 999;
+}
+.navbar {
+display:flex;
+justify-content: space-between;
+background: gray;
+padding: 1px 1px;
+margin-bottom: 10px;
+height : 55px;
+}
+.querytree_logo {
+  width: 50px;
+  height: 50px;
+  float: left;
+  padding: 14px 15px;
+  margin: -10px;;
+} 
+.navbar-brand {
+  float: left;
+  padding: 14px 15px;
+  font-size: 20px;
+  line-height: 22px;
+  height: 50px;
+  width:50px;
+  text-align: left;
+  margin-left: 8px;
+}
