--- a/src/css/QueryTree.css
+++ b/src/css/QueryTree.css
@@ -38,12 +38,13 @@
   }
   .container {
     max-width: 72%;
-    margin: 0 auto;
-   
+    /* margin: 0 auto; */
+    display: flex;
     background-color: #fff;
     border: 1px solid #ccc;
     height: 300px;
     margin-left: 101px;
+    justify-content: space-between;
     /* display: flex; */
   }
   .left-div {
@@ -55,6 +56,12 @@
     width: 100px;
     float: left;
     height: 300px;
+    
+  }
+  .my-canvas img:active {
+    opacity: 0.5;  
+       cursor: move; 
+   
   }
   .canvas-image{
     
@@ -62,4 +69,61 @@
     margin: 21px;
   }
   
+  .left-container {
+    width: 100px;
+    height: 300px;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    left: 0;
+  }
+  .left-container img {
+    display: block;
+    margin: 10px auto;
+       
+   
+  }
+  .left-container img:active {
+    opacity: 0.5;  
+       cursor: move; 
+   
+  }
+  
+  
+  .right-container {
+    width: 100%;
+    height: 300px;
+    margin-left: auto;
+    background: #eeeeee;
+    
+   
+     /* display: flex; */
+    /* flex-direction: column;
+    /* align-items: center; 
+    justify-content: center;
+    flex: 1;  */
+  }
+  .right-container:img {
+    position: absolute;
+  }
+  img {
+    border: 1px solid transparent;
+    transition: border-color 0.2s linear;
+  }
+
+  
+  img:hover {
+    
+   border-radius: 8px;
+    box-shadow: 0 0 3px 3px #eeeeee;
+  }
+  .right-icon{
+    border: 1px solid red;
+  }
+  @keyframes blink {
+    50% {
+      opacity: 0;
+    }
+  }
   
