--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,149 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.dndflow {
+  flex-direction: column;
+  /* display: flex; */
+  flex-grow: 1;
+  height: 100%;
+}
+
+.dndflow aside {
+  /* border-right: 1px solid #eee; */
+  padding: 15px 10px;
+  font-size: 12px;
+}
+
+.dndflow aside .description {
+  margin-bottom: 10px;
+}
+
+.dndflow .dndnode {
+
+  height: 30px;
+  padding: 4px;
+  border-radius: 9px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: grab;
+  width: 30px;
+  background-color: black;
+
+}
+
+/* .dndflow .dndnode.input {
+  border-color: #0041d0;
+}
+
+.dndflow .dndnode.output {
+  border-color: #ff0072;
+} */
+
+.dndflow .reactflow-wrapper {
+  flex-grow: 1;
+  height: 100%;
+}
+
+.dndflow .selectall {
+  margin-top: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .dndflow {
+    flex-direction: row;
+  }
+
+  .dndflow aside {
+    width: 20%;
+    max-width: 250px;
+  }
+}
+.sidebar {
+  width: 200px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #f7f7f7;
+  z-index: 9;
+  padding: 10px;
+  overflow-y: scroll;
+}
+
+.dndflow {
+  height: 100vh;
+  position: relative;
+}
+ 
+/* .reactflow-wrapper {
+  height: 100%;
+  width: calc(100% - 200px);
+  margin-right: -200px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}  */
+
+
+/* DESIGN */
+.custom-node{
+  position: relative;
+  width: 34px;
+  height: 34px;
+  border: 2px solid black;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  background-color: black;
+}
+
+
+.left-container {
+  width: 100px;
+  height: 300px;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  left: 0;
+}
+.left-container img {
+  display: block;
+  margin: 10px auto;
+     
+ 
+}
+.left-container img:active {
+  opacity: 0.5;  
+     cursor: move; 
+ 
+}
+
+.right-container {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  background: #eeeeee;
+  display: flex;
+align-items: center;
+ 
+}
+.right-container:img {
+  position: absolute;
+}
+img {
+  border: 1px solid transparent;
+  transition: border-color 0.2s linear;
+ 
+}
+
+.react-flow__node-default, .react-flow__node-input, .react-flow__node-output, .react-flow__node-group {
+  width: 30px !important;
+  height: 30px !important;
+  background-color: black  !important;
+  font-size: 4px  !important;
+}
