--- a/src/css/dataTablePopUp.css
+++ b/src/css/dataTablePopUp.css
@@ -157,12 +157,16 @@
   font-size: 14px;
   margin-bottom: 5px;
 }
+.form-group input{
+  width: 97% !important;
+  height: 20px !important;
+}
 
 
 .popup-datatable .form-group input,
 .popup-datatable .form-group select {
-  width: 100% !important;;
-  height: 36px !important;;
+  width: 100% ;
+  height: 36px ;
   padding: 8px;
   font-size: 14px;
   border: 1px solid #ccc;
@@ -230,4 +234,62 @@
 }
 .toolHelpLink {
   padding-top: 15px;
+}
+.btn {
+  padding: 8px 12px 7px;
+  font-size: 12px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.btn {
+  display: inline-block;
+  margin-bottom: 0;
+  text-align: center;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  line-height: 1.42857143;
+  border-radius: 4px;
+}
+.btn-primary {
+  color: #fff;
+  background-color: #004358;
+  border-color: #00303f;
+  margin-left: 5px;
+}
+
+.btn, .navbar {
+  border-width: 0 1px 4px;
+}
+.btn-default {
+  color: #555;
+  background-color: #eee;
+  border-color: #e2e2e2;
+}
+.leftColumnSetting, .leftColumnSetting{
+
+  width: 48%;
+  float: left;
+  
+}
+.leftColumnSettingList .rightColumnSettingList{
+background: #fff;
+    width: 99%;
+    height: 100px;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    overflow-y: auto;
+    padding: 5px;
+}
+li.blockItem {
+  color: #fff;
+  font-weight: bold;
+  display: block;
+  border-radius: 8px;
+  background-color: #5c8ab7;
+  overflow: hidden;
+  margin: 3px;
 }
