--- a/src/css/draggableColumn.css
+++ b/src/css/draggableColumn.css
@@ -1,6 +1,11 @@
 .list-container {
+ 
     display: flex;
     justify-content: space-between;
+   
+    border-radius: 6px;
+  
+  
   }
   
   .column-list {
@@ -127,12 +132,12 @@ li.blockItem {
   cursor: move;
 }
 
-.reactflow-wrapper {
+/* .reactflow-wrapper {
   flex: 1;
   height: 200px;
   border: 1px solid #ccc;
-  margin: 0 20px;
-}
+  
+} */
 
 .reactflow-wrapper .react-flow__renderer {
   height: 100%;
@@ -162,9 +167,7 @@ li.blockItem {
   overflow: hidden;
   margin: 3px;
 }
-.leftlist-container{
-  padding:1px;
-}
+
 ul {
   list-style-type: none;
   padding: 0;
@@ -181,4 +184,123 @@ ul li {
 ul li:hover {
   background-color: darkgray;
 }
+
+
+.column-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.leftlist-container,
+.rightlist-container {
+  width: 45%;
+  min-height: 151px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  padding: 10px;
+}
+
+.leftlist-container h4,
+.rightlist-container h4 {
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.leftlist-container ul,
+.rightlist-container ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.leftlist-container li,
+.rightlist-container li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  margin-bottom: 8px;
+  background-color: #746f6f;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.rightlist-container li {
+  position: relative;
+}
+
+.rightlist-container .crossmark-button {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  font-size: 12px;
+  padding: 5px;
+  background-color: #f5f5f5;
+  color: #999;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.rightlist-container .crossmark-button:hover {
+  background-color: #e5e5e5;
+}
+
+.rightlist-container .crossmark-button:focus {
+  outline: none;
+}
+
+.blockItem {
+  cursor: move;
+}
+
+.ui-draggable-dragging {
+  opacity: 0.5;
+}
+.btn {
+  padding: 10px 20px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-add {
+  background-color: #28a745;
+  color: #fff;
+  margin-left: 255px !important;
+}
+
+.btn-add:hover {
+  background-color: #218838;
+}
+
+.btn-add:focus {
+  outline: none;
+}
+.add-remove{
+  margin-left:1px;
+}
+.btn-removeall {
+  background-color: #dc3545 !important;
+  color: #fff !important;
+  /* margin-left: 260px !important; */
+  margin:5px;
+}
+
+.btn-removeall:hover {
+  background-color: #c82333;
+}
+
+.btn-removeall:focus {
+  outline: none;
+}
+
+
 
