--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,8 @@ code {
 
 .dndflow .dndnode {
 
-  height: 30px;
-  padding: 4px;
+  height: 35px;
+  padding: 6px;
   border-radius: 9px;
   margin-bottom: 10px;
   display: flex;
@@ -120,12 +120,7 @@ code {
   overflow: auto;
   left: 0;
 }
-.left-container img {
-  display: block;
-  margin: 10px auto;
-     
- 
-}
+
 .left-container img:active {
   opacity: 0.5;  
      cursor: move; 
@@ -155,4 +150,23 @@ img {
   height: 30px !important;
   background-color: black  !important;
   font-size: 4px  !important;
+}
+.image-wrapper {
+  /* display: flex; */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.image-wrapper img {
+  height: auto;
+  margin-top:10px; /* Maintain aspect ratio or set a fixed height */
+}
+
+.image-wrapper span {
+  margin-top: 5px; /* Adjust the margin as needed */
+    font-size: 10px; /*Adjust the font size as needed  */
+  color: white; /* Adjust the color as needed */
+  white-space: nowrap;
 }
