--- a/src/index.css
+++ b/src/index.css
@@ -45,13 +45,6 @@ code {
 
 }
 
-/* .dndflow .dndnode.input {
-  border-color: #0041d0;
-}
-
-.dndflow .dndnode.output {
-  border-color: #ff0072;
-} */
 
 .dndflow .reactflow-wrapper {
   flex-grow: 1;
@@ -88,14 +81,6 @@ code {
   position: relative;
 }
  
-/* .reactflow-wrapper {
-  height: 100%;
-  width: calc(100% - 200px);
-  margin-right: -200px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}  */
 
 
 /* DESIGN */
@@ -119,6 +104,11 @@ code {
   flex-direction: column;
   overflow: auto;
   left: 0;
+}
+
+.left-container img {
+  display: block;
+  
 }
 
 .left-container img:active {
@@ -149,10 +139,13 @@ img {
   width: 30px !important;
   height: 30px !important;
   background-color: black  !important;
-  font-size: 4px  !important;
+  font-size: 7px  !important;
+    white-space: nowrap !important;
+    padding: 0px !important;
+    padding-top: 28px !important;
 }
 .image-wrapper {
-  /* display: flex; */
+   display: flex; 
   flex-direction: column;
   align-items: center;
   justify-content: center;
