--- a/src/index.css
+++ b/src/index.css
@@ -163,3 +163,12 @@ img {
   color: white; /* Adjust the color as needed */
   white-space: nowrap;
 }
+
+.btn-warning {
+  color: #fff;
+  background-color: #fd7400;
+  border-color: #e46800;
+}
+/* #addanother{
+margin-left:5px;
+} */
