--- a/src/index.css
+++ b/src/index.css
@@ -199,3 +199,67 @@ margin-left:5px;
   border-radius: 50%;
   cursor: pointer;
 }
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch .slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  border-radius: 34px;
+  transition: 0.4s;
+}
+
+.switch.on .slider {
+  background-color: #2196f3;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  border-radius: 50%;
+  transition: 0.4s;
+}
+
+.switch.on .slider:before {
+  transform: translateX(26px);
+}
+
+ /* togglebutton in filter */
+ .toggleButton {
+  display: inline-block;
+  width: 30px;
+  height: 15px;
+  border-radius: 10px;
+  background-color: #ccc;
+  border: none;
+  cursor: pointer;
+  font-size: 8px;
+}
+
+.toggleButton:focus {
+  outline: none;
+}
+
+.toggleButton:hover {
+  background-color: #ddd;
+}
+
+.toggleButton:active {
+  background-color: #bbb;
+}
+
+
+
